--- a/bfbfe-ir/Cargo.toml
+++ b/bfbfe-ir/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "bfbfe-ir"
 version = "0.1.0"
+authors = ["Reperak"]
 edition = "2021"
+description = "Intermediate representation geared towards Brainfuck code"
+license = "GPL-3.0-or-later"
 
 [dependencies]
 itertools = "0.10"
