--- a/bfbfe/Cargo.toml
+++ b/bfbfe/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "bfbfe-cli"
+name = "bfbfe"
 version = "0.2.0"
 authors = ["Reperak"]
 edition = "2021"
-description = "Command-line app for interacting with BFBFE"
+description = "All-in-one Brainfuck parser, optimizer, transpiler, and interpreter"
 license = "GPL-3.0-or-later"
 
 [dependencies]
