--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
-[workspace]
-members = [ 
-    "bfbfe-cli",
-    "bfbfe",
-]
+[package]
+name = "bfbfe"
+version = "0.2.0"
+authors = ["Reperak"]
+edition = "2021"
+description = "All-in-one Brainfuck parser, optimizer, transpiler, and interpreter"
+license = "GPL-3.0-or-later"
+
+[dependencies]
+thiserror = "1.0"
